tests/struct_field_defaults_embedded_forward_ref_bad.sl
// Verifies embedded struct field defaults cannot reference later outer fields.
struct Base {
	x i32
}

struct Bad {
	Base = { x: y }
	y i32 = 1
}
